<resources>
    <string name="app_name">EverydayChef</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_login_first">Login or register first</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_fridge">Fridge</string>
    <string name="menu_cook">Cook</string>
    <string name="menu_shopping_list">Shopping list</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="welcome">Welcome to EverydayChef</string>
    <string name="register">Register</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>

    <string name="menu_profile">Profile</string>
    <string name="facebook_app_id">195155534903437</string>
    <string name="fb_login_protocol_scheme">fb195155534903437</string>
    <string name="google_server_client_id">37840691909-j333t8b7p9c488lne7n9gv6lr1k8f8uh.apps.googleusercontent.com</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
